add week2 di slides to class website

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -181,7 +181,7 @@
 					<td>1/11 (Zoom)</td>
 					<td>Discussion</td>
 					<td>
-						<!--<a href=slides/discussion_slides/week_2_discussion.pdf>Discussion 2 Slides</a>-->
+						<a href=discussions/week2.pdf>Week 2 Discussion Slides</a>
 					</td>
 					<td>
 						<!--<a href="pa/pa1.html">Assignment 1 due</a><br>
