add week3 discussion slides

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -233,8 +233,7 @@
 					<td>1/18 (Zoom)</td>
 					<td>Discussion</td>
 					<td>
-						<!--<a href=slides/discussion_slides/week_3_discussion.pdf>Discussion 3 Slides</a><br>
-						<a href=slides/discussion_slides/sploit4.pdf>sploit4 Supplemental Slides</a>-->
+						<a href=discussions/week3.pdf>Week 3 Discussion Slides</a>
 					</td>
 					<td></td>
 				</tr>
