--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -241,10 +241,11 @@
 				
 				<tr>
 					<td>1/20 (Zoom)</td>
-					<td>Sandboxing and isolation<br>
-						<!--<br><a href="slides/5-isolation.pdf">Lecture slides</a>-->
+					<td>Isolation<br>
+						<a href="slides/6-isolation.pdf">Lecture slides</a>
 					</td>
 					<td>
+					  <a href="scribenotes/5-isolation-notes.pdf">Scribe notes</a><br>
 						<a href="https://cseweb.ucsd.edu/~dstefan/noindex/login2020/">The Road to Less Trusted Code:
 							Lowering the Barrier to In-process Sandboxing</a> by Tal Garfinkel, Shravan Narayan, Craig
 						Disselkoen, Hovav Shacham, and Deian Stefan<br>
