add starter code

--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -40,6 +40,8 @@ still log in as `root` using `su` or by logging into the VM directly.
 
 SSH is listening on port `2222`.
 
+You can redownload the starter code [here](https://cseweb.ucsd.edu/classes/wi22/cse127-a/pa/assets/side-channel-starter.zip).
+
 ## Assignment Files
 
 Starter files are included inside the `student` user's home directory within the VM image.
