update pa2 writeup

--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -1,22 +1,41 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
-    **PA 2: Side channels (100 points)**
+    **PA 2: Side channels (20 points)**
 
-**Early Turn-In: Friday, November 5, 2021 by 17:00:00 (10% bonus)**
+**Due: Tuesday, February 1 by 6:00pm**
 
-**Hard Deadline: Monday, November 8, 2021 by 17:00:00**
+This is a group project; you can work in a team of size at most two
+and submit one project per team. You are not required to work with the
+same partner on every project.  You and your partner should
+collaborate closely on each part.
 
-TODO: change the ddl and #points
+You have two late days that you may use to turn in work past the
+deadline over the entire quarter. A late day is a contiguous 24-hour
+period. Both you and your partner will be charged for every late day
+that you use, and you both must have late days to use them. These late
+days are intended to cover your extension needs for usual
+circumstances: brief illness, busy with other classes, interviews,
+travel, extracurricular conflicts, and so on. You do not need to ask
+permission to use a late day.
+
+The code and other answers you submit must be entirely your team's own
+work. You may discuss the conceptualization of the project and the
+meaning of the questions, but you may not look at any part of someone
+else’s solution or collaborate with anyone other than your
+partner. You may consult published references, provided that you
+appropriately cite them (e.g., with program comments).
+
+# Introduction
 
 The goal of this assignment is to gain hands-on experience exploiting side
 channels. This assignment will demonstrate how side channels can be just as
 dangerous as the control flow vulnerabilities you exploited in PA 1.
 
-You will be provided a two skeleton files (`memhack.c` and `timehack.c`) that
-you will use to exploit side channels present in a target library (`sysapp.c`)
-to obtain a protected key. You may consult any online references you wish. If
-you use any code in your answer that you did not write yourselves, you must
-document that fact. Failure to do so will be considered a violation of the
-academic integrity policy.
+You will be provided a two skeleton files (`memhack.c` and
+`timehack.c`) that you will use to exploit side channels present in a
+target library (`sysapp.c`) to obtain a protected key. You may consult
+any online references you wish.  You must document sources you used in
+your solutions, for example with program comments.  Failure to do so
+will be considered a violation of the academic integrity policy.
 
 # Getting Started
 
