update to use one assignment on gradescope

--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -94,8 +94,8 @@ its corresponding `writeup.txt` file.
 
 ## Submitting Your Solutions
 
-Submit `memhack.c` and `timehack.c` with their `writeup.txt` to the corresponding
-assignments on Gradescope.
+Submit `memhack.c` and `timehack.c`, `writeup-memhack.txt`, and `writeup-timehack.txt`
+to the PA2: Side channels assignment on Gradescope.
 
 The score that you receive on Gradescope is **NOT** your final grade for the PA,
 so please make sure that you test your code thoroughly.
