Add pa2_bs + add assignment 2 to index.html

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -269,7 +269,7 @@
 					<td></td>
 
 					<td>
-						<!--<a href="pa/pa3.html">Assignment 3 available</a>-->
+						<a href="pa/pa2.html">Assignment 2 available</a>
 					</td>
 				</tr>
 
@@ -298,7 +298,9 @@
 						<a href="https://code.google.com/p/browsersec/wiki/Part1">Browser Security Handbook: Basic
 							concepts behind web browsers</a><br>
 					</td>
-					<td></td>
+					<td>
+					  <a href="pa/pa2.html">Assignment 2 due</a><br>
+					</td>
 				</tr>
 
 
