--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -264,10 +264,11 @@
 
 				<tr>
 					<td>1/25 (Zoom)</td>
-					<td>Side channels<br></td>
-					<!--<br><a href="slides/6-sidechannels.pdf">Lecture slides</a>-->
-					<td></td>
-
+					<td>Side channels<br>
+					<br><a href="slides/7-sidechannels.pdf">Lecture slides</a></td>
+					<td>
+					  <a href="scribenotes/6-sidechannels-notes.pdf">Scribe notes</a><br>
+					</td>
 					<td>
 						<a href="pa/pa2.html">Assignment 2 available</a>
 					</td>
