--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <title>CSE 127 - PA2: Side Channels</title>
+    <title>CSE 127 - PA2: Side Channel Attacks</title>
     <style>
         img {
             padding: 0;
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div>
-                    <h1>PA2: Side Channels <span class="text-muted courseyear"><small>Winter 2022</small></span>
+                    <h1>PA2: Side Channel Attacks <span class="text-muted courseyear"><small>Winter 2022</small></span>
                     </h1>
 
                     <div class="alert alert-primary" role="alert">
@@ -364,7 +364,7 @@
 
                             <strong class="asterisk">Do not write a solution that simply checks all passwords
                                 exhaustively.</strong> You
-                            will not get credit for this. The timing side-channel should be exploitable in
+                            will not get credit for this. The timing side channel should be exploitable in
                             linear time (we will stop programs that are running for excessive periods) and
                             it will basically feel instantaneous for passwords of 8 characters or less
                             (note we will not test passwords over 12 characters).
