update writeup instruction and points

--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -187,13 +187,13 @@
                         </p>
 
                         <p> Additionally, for each exploit, provide a brief description of how it works in
-                            its corresponding <code>writeup.txt</code> file. </p>
+                            its corresponding <code>writeup-X.txt</code> file. </p>
 
                         <h3 id="submitting-your-solutions">Submitting Your Solutions</h3>
 
-                        <p> Submit <code>memhack.c</code> and <code>timehack.c</code> with their
-                            <code>writeup.txt</code> to the corresponding
-                            assignments on Gradescope.
+                        <p> Submit <code>memhack.c</code>, <code>timehack.c</code>
+                            , <code>writeup-memhack.txt</code>, and <code>writeup-timehack.txt</code>
+                            to the PA2: Side Channel Attacks assignment on Gradescope.
                         </p>
 
                         <p> The score that you receive on Gradescope is <strong class="asterisk">NOT</strong> your final
@@ -205,9 +205,12 @@
                         <p> We will randomize the contents of the <code>correct_pass</code> variable, and we expect your
                             <code>memhack.c</code>
                             and <code>timehack.c</code> to correctly determine the password.
+                            Each attack is worth 8 points.
                         </p>
 
-                        <p> We will grade the writeup portion based on accuracy and correctness. </p>
+                        <p> We will grade the writeup portion based on accuracy and correctness.
+                            Each writeup file is worth 2 points.
+                        </p>
 
                         <hr>
                         <h2 id="exploit-construction">Exploit Construction</h2>
