--- a/cse127-winter22/pa/pa2.html
+++ b/cse127-winter22/pa/pa2.html
@@ -211,6 +211,15 @@
                         <p> We will grade the writeup portion based on accuracy and correctness.
                             Each writeup file is worth 2 points.
                         </p>
+                        
+                        <p>To summarize, the points will be allocated as follows:
+                        </p>
+                            <ul>
+                                <li>8 points for the memory-based side channel exploit</li>
+                                <li>2 points for the memory-based side channel writeup</li>
+                                <li>8 points for the timing-based side channel exploit</li>
+                                <li>2 points for the timing-based side channel writeup</li>
+                        </ul>
 
                         <hr>
                         <h2 id="exploit-construction">Exploit Construction</h2>
