Add discussion week 4

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -278,7 +278,9 @@
 				<tr>
 					<td>1/25 (Zoom)</td>
 					<td>Discussion<br></td>
-					<td></td>
+					<td>
+						<a href=discussions/week4.pdf>Week 4 Discussion Slides</a>
+					</td>
 					<td></td>
 				</tr>
 				
