--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -25,7 +25,7 @@
 			<h6><b>Instructor:</b></h6>
 				<p>&nbsp; <a href="https://cseweb.ucsd.edu/~nadiah/">Nadia Heninger</a>
 				(nadiah at cs dot ucsd dot edu)<br>
-				&nbsp; Office hours: Tuesday 3:30pm-4:30pm</p>
+				&nbsp; Office hours: Tuesday 3:30pm-4:30pm at tables in front of CSE</p>
 
 			<h6><b>TAs:</b></h6>
 				<p>&nbsp; Christopher Liu Office Hours: Thursday 3:30pm-4:30pm
@@ -37,10 +37,10 @@
 				<br>&nbsp; Jiazheng Liu Office Hours: Friday 12pm-1pm</p>
 
 			<h6><b>Lectures:</b></h6>
-				<p>&nbsp; Tuesday/Thursday 2:00pm-3:20pm</p>
+				<p>&nbsp; Tuesday/Thursday 2:00pm-3:20pm P416 East Tent in person/Zoom online</p>
 
 			<h6><b>Discussion:</b></h6>
-				<p>&nbsp; Tuesday 8:00pm-8:50pm</p>
+				<p>&nbsp; Tuesday 8:00pm-8:50pm on Zoom</p>
 
 			<h6><b>Class Resources:</b></h6>
 			<ul>
@@ -85,8 +85,7 @@
 			<hr>
 
 			<h3>Pandemic Considerations</h3>
-			<p>We will be fully remote via Zoom for the first two weeks of the
-				quarter (updated to the month of January), following university policy. 
+			<p>We will be fully remote via Zoom for the month of January, following university policy. 
 				Zoom links are in Canvas.
 				We will return to fully in person instruction when the university
 				allows. Midterm and final exams will be in person only unless the
@@ -319,7 +318,7 @@
 				</tr>
 
 				<tr>
-					<td>2/1 <br>(In person)</td>
+					<td>2/1 <br>(Zoom)</td>
 					<td>Discussion: Midterm Review<br></td>
 					<td>
 						<!--<a href=slides/discussion_slides/week_5_discussion.pdf>Discussion Slides</a><br>-->
@@ -361,7 +360,7 @@
 				</tr>
 
 				<tr>
-					<td>2/8 <br>(In person)</td>
+					<td>2/8 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
 						<!--<a href=slides/discussion_slides/week_6_discussion.pdf>Discussion Slides</a><br>-->
@@ -398,7 +397,7 @@
 				</tr>
 
 				<tr>
-					<td>2/15 <br>(In person)</td>
+					<td>2/15 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
 						<!--<a href=slides/discussion_slides/week_7_discussion.pdf>Discussion Slides</a><br>-->
@@ -441,7 +440,7 @@
 				</tr>
 
 				<tr>
-					<td>2/22 <br>(In person)</td>
+					<td>2/22 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
 						<!--<a href=slides/discussion_slides/week_8_discussion.pdf>Discussion Slides</a><br>-->
@@ -473,7 +472,7 @@
 				</tr>
 
 				<tr>
-					<td>3/1 <br>(In person)</td>
+					<td>3/1 <br>(Zoom)</td>
 					<td>Discussion</td>
 					<td></td>
 					<td>
@@ -529,7 +528,7 @@
 				</tr>
 
 				<tr>
-					<td>3/8 <br>(In person)</td>
+					<td>3/8 <br>(Zoom)</td>
 					<td>Discussion: Final Review<br></td>
 					<td>
 						<!--<a href="slides/discussion_slides/finalreview.pdf">Final Review Slides</a><br>-->
