--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -286,10 +286,11 @@
 				<tr>
 					<td>1/27 (Zoom)</td>
 					<td>Web intro<br>
-						<!--<br><a href="slides/8-webmodel.pdf">Lecture slides</a>-->
+						<br><a href="slides/8-webmodel.pdf">Lecture slides</a>
 						<br>
 					</td>
 					<td>
+					  <a href="scribenotes/8-webintro-notes.pdf">Scribe notes</a><br>
 						<a href="https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/"> CSRF, XSS, SQLi
 							notes</a><br>
 						<a href="https://www.php.net/manual/en/security.database.sql-injection.php">SQL
