--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -308,7 +308,7 @@
 				<tr>
 					<td>2/1 (In person)</td>
 					<td>Web attacks and defenses<br>
-						<!--<br><a href="slides/9-webattacks.pdf">Lecture slides</a>-->
+						<br><a href="slides/9-webattacks.pdf">Lecture slides</a>
 					</td>
 					<td><a href="https://cseweb.ucsd.edu/~dstefan/cse127-fall20/papers/csrf.pdf">Robust defenses for
 							cross-site request forgery</a> by Adam Barth, Collin Jackson, and John C. Mitchell<br>
