Add week 5 discussion

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -177,7 +177,7 @@
 					<td>1/11 (Zoom)</td>
 					<td>Discussion</td>
 					<td>
-						<a href=discussions/week2.pdf>Week 2 Discussion Slides</a>
+						<a href="discussions/week2.pdf">Week 2 Discussion Slides</a>
 					</td>
 					<td>
 						
@@ -185,6 +185,7 @@
 					</td>
 				</tr>
 
+				<tr>
 					<td>1/13 (Zoom)</td>
 					<td>Buffer overflow defenses<br>
 						<br><a href="slides/4-lowlevelmitigations.pdf">Lecture slides</a>
@@ -232,7 +233,7 @@
 					<td>1/18 (Zoom)</td>
 					<td>Discussion</td>
 					<td>
-						<a href=discussions/week3.pdf>Week 3 Discussion Slides</a>
+						<a href="discussions/week3.pdf">Week 3 Discussion Slides</a>
 					</td>
 					<td></td>
 				</tr>
@@ -278,7 +279,7 @@
 					<td>1/25 (Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
-						<a href=discussions/week4.pdf>Week 4 Discussion Slides</a>
+						<a href="discussions/week4.pdf">Week 4 Discussion Slides</a>
 					</td>
 					<td></td>
 				</tr>
@@ -322,7 +323,7 @@
 					<td>2/1 <br>(Zoom)</td>
 					<td>Discussion: Midterm Review<br></td>
 					<td>
-						<!--<a href=slides/discussion_slides/week_5_discussion.pdf>Discussion Slides</a><br>-->
+						<a href="discussions/week5.pdf">Week 5 Discussion Slides</a>
 					</td>
 					<td>
 						<!--<a href="pa/pa4.html">Assignment 4 available</a>-->
