--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -311,7 +311,8 @@
 					<td>Web attacks and defenses<br>
 						<br><a href="slides/9-webattacks.pdf">Lecture slides</a>
 					</td>
-					<td><a href="https://cseweb.ucsd.edu/~dstefan/cse127-fall20/papers/csrf.pdf">Robust defenses for
+					<td>					  <a href="scribenotes/9-webattacks-notes.pdf">Scribe notes</a><br>
+					  <a href="https://cseweb.ucsd.edu/~dstefan/cse127-fall20/papers/csrf.pdf">Robust defenses for
 							cross-site request forgery</a> by Adam Barth, Collin Jackson, and John C. Mitchell<br>
 					</td>
 					<td>
@@ -334,9 +335,9 @@
 				<tr>
 					<td>2/3 <br>(In person)</td>
 					<td>Network intro<br>
-						<!-- <br><a href="slides/10-networkintro.pdf">Lecture slides</a> -->
+						<br><a href="slides/10-networkintro.pdf">Lecture slides</a>
 					</td>
-					<td>
+					<td>					  <a href="scribenotes/10-networkintro-notes.pdf">Scribe notes</a><br>
 						<i>Optional further reading:</i><br>
 						<a href="http://en.wikipedia.org/wiki/Autonomous_system_%28Internet%29">Wikipedia: Autonomous
 							System</a><br>
