--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -350,7 +350,9 @@
 							Control Protocol</a><br>
 						<a href="http://en.wikipedia.org/wiki/Domain_Name_System">Wikipedia: Domain Name System</a>
 					</td>
-					<td></td>
+					<td>
+						<a href="pa/pa3.html">Assignment 3 available</a>
+					</td>
 				</tr>
 
 				<tr>
@@ -420,7 +422,9 @@
 						<a href="https://archive.org/stream/bstj28-4-656#page/n0/mode/2up">Communication Theory of
 							Secrecy Systems</a> by Shannon<br>
 					</td>
-					<td></td>
+					<td>
+						<a href="pa/pa3.html">Assignment 3 due</a>
+					</td>
 				</tr>
 
 				<tr>
