--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -368,7 +368,7 @@
 					<td>2/8 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
-						<a href=slides/discussions/week6.pdf>Week 6 Discussion Slides</a><br>
+						<a href=discussions/week6.pdf>Week 6 Discussion Slides</a><br>
 					</td>
 					<td>
 						<!--<a href="pa/pa5.html">Assignment 5 available</a>-->
