--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -25,7 +25,7 @@
 			<h6><b>Instructor:</b></h6>
 				<p>&nbsp; <a href="https://cseweb.ucsd.edu/~nadiah/">Nadia Heninger</a>
 				(nadiah at cs dot ucsd dot edu)<br>
-				&nbsp; Office hours: Tuesday 3:30pm-4:30pm at tables in front of CSE</p>
+				&nbsp; Office hours: Tuesday 3:30pm-4:30pm at tables in front of CSE or EBU3B 3138 if it's cold/wet</p>
 
 			<h6><b>TAs:</b></h6>
 				<p>&nbsp; Christopher Liu Office Hours: Thursday 3:30pm-4:30pm
@@ -358,7 +358,7 @@
 				<tr>
 					<td>2/8</td>
 					<td>Midterm Exam</td>
-					<td>Midterm exam will be in person only unless UCSD is fully remote on this date.</td>
+					<td>Outdoor location: P416 East Tent/Indoor location: Center 105.  One cheat sheet allowed.</td>
 					<td>
 						<!--<a href="pa/pa4.html">Assignment 4 due</a>-->
 					</td>
