--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -378,9 +378,11 @@
 				<tr>
 					<td>2/10 <br>(In person)</td>
 					<td>Network attacks<br>
-						<!-- <br><a href="slides/11-networkattacks.pdf">Lecture slides</a> -->
+						<br><a href="slides/11-networkattacks.pdf">Lecture slides</a>
 					</td>
-					<td><a href="https://www.cs.columbia.edu/~smb/papers/ipext.pdf"> Security problems in the TCP/IP
+					<td>
+					  <a href="scribenotes/11-networkattacks-notes.pdf">Scribe notes</a><br>
+					  <a href="https://www.cs.columbia.edu/~smb/papers/ipext.pdf"> Security problems in the TCP/IP
 							protocol suite</a> by Steven Bellovin<br>
 						<a href="https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf">A Look Back at "Security
 							Problems in the TCP/IP Protocol Suite"</a> by Steven Bellovin<br>
