lecture 12 slides/notes

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -396,9 +396,10 @@
 
 				<tr>
 					<td>2/15 <br>(In person)</td>
-					<td>Network defenses<br></td>
-						<!-- <br><a href="slides/12-networkdefenses.pdf">Lecture slides</a> -->
-					<td><a href="https://samy.pl/slipstream/">NAT Slipstreaming</a> by Samy Kamkar<br>
+					<td>Network defenses<br>
+						<br><a href="slides/12-networkdefenses.pdf">Lecture slides</a></td>
+					<td><a href="scribenotes/12-networkdefenses-notes.pdf">Scribe notes</a><br>
+					  <a href="https://samy.pl/slipstream/">NAT Slipstreaming</a> by Samy Kamkar<br>
 					</td>
 					<td></td>
 				</tr>
