--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -408,7 +408,7 @@
 					<td>2/15 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
-						<!--<a href=slides/discussion_slides/week_7_discussion.pdf>Discussion Slides</a><br>-->
+						<a href=discussions/week7.pdf>Week 7 Discussion Slides</a><br>
 					</td>
 					<td></td>
 				</tr>
