--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -416,9 +416,9 @@
 				<tr>
 					<td>2/17 <br>(In person)</td>
 					<td>Symmetric cryptography<br>
-						<!-- <br><a href="slides/13-symmetriccrypto.pdf">Lecture slides</a> -->
+						<br><a href="slides/13-symmetriccrypto.pdf">Lecture slides</a>
 					</td>
-					<td>
+					<td><a href="scribenotes/13-symmetriccrypto-notes.pdf">Scribe notes</a><br>
 						<a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c05.pdf">Ch. 5 of Security Engineering</a>
 						by Ross Anderson<br>
 						<br><i>Optional further reading:</i><br>
