--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -446,7 +446,9 @@
 						<a href="https://www.cis.upenn.edu/~nadiah/courses/cis800-02-f13/readings/diffie-hellman.pdf">New
 							Directions in Cryptography</a> by Whitfield Diffie and Martin E. Hellman
 					</td>
-					<td></td>
+					<td>
+						<a href="pa/pa4.html">Assignment 4 available</a>
+					</td>
 				</tr>
 
 				<tr>
@@ -455,9 +457,7 @@
 					<td>
 						<!--<a href=slides/discussion_slides/week_8_discussion.pdf>Discussion Slides</a><br>-->
 					</td>
-					<td>
-						<!--<a href="pa/pa6.html">Assignment 6 available</a>-->
-					</td>
+					<td></td>
 				</tr>
 
 				<tr>
@@ -478,16 +478,16 @@
 						<!-- <br><a href="slides/16-authentication.pdf">Lecture slides</a> -->
 					</td>
 					<td></td>
-					<td></td>
+					<td>
+						<a href="pa/pa4.html">Assignment 4 due</a>
+					</td>
 				</tr>
 
 				<tr>
 					<td>3/1 <br>(Zoom)</td>
 					<td>Discussion</td>
 					<td></td>
-					<td>
-						<!--<a href="pa/pa6.html">Assignment 6 due</a>-->
-					</td>
+					<td></td>
 				</tr>
 
 
