--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -455,7 +455,7 @@
 					<td>2/22 <br>(Zoom)</td>
 					<td>Discussion<br></td>
 					<td>
-						<!--<a href=slides/discussion_slides/week_8_discussion.pdf>Discussion Slides</a><br>-->
+						<a href="discussions/week8.pdf">Week 8 Discussion Slides</a><br>
 					</td>
 					<td></td>
 				</tr>
