link to lecture slides

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -433,7 +433,7 @@
 				<tr>
 					<td>2/22 <br>(In person)</td>
 					<td>Public-key cryptography<br>
-						<!-- <br><a href="slides/14-pubkeycrypto.pdf">Lecture slides</a> -->
+						<br><a href="slides/14-pubkeycrypto.pdf">Lecture slides</a>
 					</td>
 					<td>
 						<a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c05.pdf">Ch. 5 of Security Engineering</a>
@@ -463,7 +463,7 @@
 				<tr>
 					<td>2/24 <br>(In person)</td>
 					<td>TLS and secure channels<br>
-						<!-- <br><a href="slides/15-tls.pdf">Lecture slides</a> -->
+						<br><a href="slides/15-tls.pdf">Lecture slides</a>
 					</td>
 					<td>
 						<a href="https://tls.ulfheim.net/">The Illustrated TLS 1.2 Connection</a><br>
