--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -475,7 +475,7 @@
 				<tr>
 					<td>3/1 <br>(In person)</td>
 					<td>Authentication and passwords<br>
-						<!-- <br><a href="slides/16-authentication.pdf">Lecture slides</a> -->
+						<br><a href="slides/16-authentication.pdf">Lecture slides</a>
 					</td>
 					<td></td>
 					<td>
