--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -436,6 +436,7 @@
 						<br><a href="slides/14-pubkeycrypto.pdf">Lecture slides</a>
 					</td>
 					<td>
+					  <a href="scribenotes/14-pubkeycrypto-notes.pdf">Scribe notes</a><br>
 						<a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c05.pdf">Ch. 5 of Security Engineering</a>
 						by Ross Anderson<br>
 						<br><i>Optional further reading:</i><br>
