--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -486,7 +486,9 @@
 				<tr>
 					<td>3/1 <br>(Zoom)</td>
 					<td>Discussion</td>
-					<td></td>
+					<td>
+						<a href="discussions/week9.pdf">Week 9 Discussion Slides</a><br>
+					</td>
 					<td></td>
 				</tr>
 
