--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -496,7 +496,7 @@
 				<tr>
 					<td>3/3 <br>(In person)</td>
 					<td>Privacy and anonymity<br>
-						<!-- <br><a href="slides/17-privacy.pdf">Lecture slides</a> -->
+						<br><a href="slides/17-privacy.pdf">Lecture slides</a>
 					</td>
 					<td>
 						<a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch26-7sep.pdf">Ch. 25 of Security
