add pa5 to index

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -519,6 +519,7 @@
 					</td>
 					<td>
 						<a href="pa/pa4.html">Assignment 4 due</a>
+						<a href="pa/pa5.html">Assignment 5 available</a>
 					</td>
 				</tr>
 
@@ -561,6 +562,14 @@
 							Cryptocurrencies</a> by Nicholas Weaver
 					</td>
 					<td></td>
+				</tr>
+				<tr>
+					<td>3/13</td>
+					<td></td>
+					<td></td>
+					<td>
+						<a href="pa/pa5.html">Assignment 5 due</a>
+					</td>
 				</tr>
 
 				<tr>
