fix gradescope submissions

--- a/cse127-winter22/pa/pa5.html
+++ b/cse127-winter22/pa/pa5.html
@@ -84,7 +84,7 @@
             Vigenere ciphers can be generally deciphered using Kasiski Examination, which is
             discussed on the wikipedia page.</p>
             <p>You can find some ciphertext produced with the Vigenere cipher under a certain
-            key on Gradescope as the assignment "Assignment 6 ciphertext".</p>
+            key on Gradescope as the assignment "PA5: Ciphertext".</p>
             <p>We also provided sample code for decrypting ciphertext <a href="assets/decrypt.py">sample decryption code here</a>.</p
             <p>Encrypting a plaintext letter with a key letter <code>A</code> results in no change, encrypting
             with a key letter <code>B</code> results in an increment by one place in the alphabet, encrypting with key letter <code>C</code>
@@ -579,11 +579,12 @@
           <h2 id="submission-checklist">Submission Checklist</h2>
           <p>Submit the following to gradescope:</p>
           <ul>
-            <li><p><code>vigenere.key</code> to <strong>6. Vigenere key</strong> (for part 1)</p></li>
-            <li><p><code>len_ext_attack.py</code> to  <strong>6. Length extension</strong> (for part 2)</p></li>
-            <li><p><code>good</code> and <code>evil</code> to <strong>6. Hash collision</strong> (for part 3)</p></li>
-            <li><p><code>bleichenbacher.py</code> to <strong>6. Signature forgery</strong> (for part 4)</p></li>
-            <li><p><code>writeup.txt</code> to <strong>6. Writeup</strong> (with answers to parts 3a and 5)</p></li>
+            <li><p><code>vigenere.key</code> (for part 1)</p></li>
+            <li><p><code>len_ext_attack.py</code> (for part 2)</p></li>
+            <li><p><code>good</code> (for part 3)</p></li>
+            <li><p><code>evil</code> (for part 3)</p></li>
+            <li><p><code>bleichenbacher.py</code> (for part 4)</p></li>
+            <li><p><code>writeup.txt</code> (with answers to parts 3a and 5)</p></li>
           </ul>
           <p><strong>Note:</strong> Gradescope has 0.1 point for checking the existence of each file above, but they will be removed after the deadline and will not affect your grade.</p>
         </div>
