--- a/cse127-winter22/pa/pa5.html
+++ b/cse127-winter22/pa/pa5.html
@@ -533,7 +533,7 @@
           </ol>
           <p>We have provided a Python library, <code>roots.py</code>, that
           provides several useful functions that you may wish to use when implementing
-          your solution.  You can <a href="../resources/roots.py">download the library here</a>. Your program
+          your solution.  You can <a href="assets/roots.py">download the library here</a>. Your program
           may assume that PyCrypto and <code>roots.py</code> are available, and may use standard
           Python libraries, but should otherwise be self-contained.</p>
           <p>In order to use these functions, you will have to import <code>roots.py</code>. You
