add week10 discussion

--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -544,9 +544,9 @@
 
 				<tr>
 					<td>3/8 <br>(Zoom)</td>
-					<td>Discussion: Final Review<br></td>
+					<td>Discussion<br></td>
 					<td>
-						<!--<a href="slides/discussion_slides/finalreview.pdf">Final Review Slides</a><br>-->
+						<a href="discussions/week10.pdf">Week 10 Discussion Slides</a><br>
 					</td>
 					<td></td>
 				</tr>
