--- a/cse127-winter22/index.html
+++ b/cse127-winter22/index.html
@@ -526,7 +526,7 @@
 				<tr>
 					<td>3/8 <br>(In person)</td>
 					<td>Ethics, law, and policy<br>
-						<!-- <br><a href="slides/19-policy.pdf">Lecture slides</a> -->
+						<br><a href="slides/18-policy.pdf">Lecture slides</a>
 					</td>
 					<td>
 						<i>Optional further reading:</i><br>
@@ -554,7 +554,7 @@
 				<tr>
 					<td>3/10 <br>(In person)</td>
 					<td>Conclusion and special topics<br>
-						<!-- <br><a href="slides/20-topics.pdf">Lecture slides</a> -->
+						<br><a href="slides/19-topics.pdf">Lecture slides</a>
 					</td>
 					<td><a href="https://www.cs.ru.nl/~jhh/pub/secsem/chaum1985bigbrother.pdf">Security without
 							identification: Transaction systems to make Big Brother obsolete</a> by Chaum 1985<br>
@@ -575,7 +575,7 @@
 				<tr>
 					<td>3/17</td>
 					<td>Final Exam 3:00pm - 6:00pm</td>
-					<td>The final exam will be in person only unless the university is fully remote.</td>
+					<td>Outdoor location: P416 East Tent/Indoor location: Center 115.  One cheat sheet allowed.</td>
 					<td></td>
 				</tr>
 
