--- a/cse127-winter23/index.html
+++ b/cse127-winter23/index.html
@@ -37,17 +37,17 @@
 
 				<h6><b>TAs:</b></h6>
 				<p>
-				      &nbsp; Leo Cao
-				      <br>&nbsp; Christopher Cha
-				      <br>&nbsp; Karthik Mudda
-				      <br>&nbsp; Ethan Tan
-				      <br>&nbsp; Allison Turner
-				      <br>&nbsp; Satish Yerva
+				      &nbsp; Leo Cao Office Hours: Monday 2-3pm
+				      <br>&nbsp; Christopher Cha Office Hours: Tuesday 4-5pm
+				      <br>&nbsp; Karthik Mudda Office Hours: 1-2pm EBU3B B270A
+				      <br>&nbsp; Ethan Tan Office Hours: Wednesday 5-6pm
+				      <br>&nbsp; Allison Turner Office Hours: Tuesday 11am-12pm
+				      <br>&nbsp; Satish Yerva Office Hours: Friday 4:30pm-5:30pm
 				</p>
 
 				<h6><b>Tutors:</b></h6>
 				<p>
-				  &nbsp; Shubham Bhargava
+				  &nbsp; Shubham Bhargava Office Hours: Monday 2:30-3:30pm
 				</p>
 
 
