--- a/cse127-winter23/pa/pa1.html
+++ b/cse127-winter23/pa/pa1.html
@@ -41,7 +41,7 @@
 
           <div class="alert alert-primary" role="alert">
             <b> Total Points: 10</b><br>
-            <b> Due: Tuesday, January 20 at 11:59 pm</b>
+            <b> Due: Tuesday, January 17 at 11:59 pm</b>
           </div>
 
           <div class="md-content">
@@ -50,7 +50,7 @@
               project per team. You are not required to work with the same partner on every project.
               You and your partner should collaborate closely on each part.</p>
 
-            <p>You have two/three? late days that you may use to turn in work past the
+            <p>You have two late days that you may use to turn in work past the
               deadline over the entire quarter. A late day is a contiguous 24-hour
               period. Both you and your partner will be charged for every late day
               that you use, and you both must have late days to use them. These
@@ -114,7 +114,7 @@
           </p>
 
         <hr />
-        <h2>Part 1: Using GDB</h2>
+        <h2>Using GDB</h2>
         <p>
           Alice is a security engineer in a company called Security4All. She felt 
           that their programs are running a bit weird recently. After doing some
